# tenable-host-doctor

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  QUICKSTART_CLAUDE.md  README.md  TODO.md  pyproject.toml  skill.md
docs/: ARCHITECTURE.md  ATTACHMENT_FETCHING.md  DEBUG_LOOP_PLAN.md  EFFECTIVENESS_PLAN.md  PLUGIN_ENHANCEMENT_PLAN.md  PROGRESS_2026-06-16.md  SCAN_AUTOFETCH_COMPLETE.md  SSH_COMMAND_LOG_IMPLEMENTATION.md  llm_integration.md
host_doctor/: __init__.py  cli.py  config.py  models.py  report.py  scan_creator.py
host_doctor/agent/: __init__.py  agent.py  tools.py
host_doctor/analyzers/: __init__.py  auth.py  config.py  correlation.py  coverage.py  credential_state.py  debug_logs.py  diagnostics.py  discovery.py  helpers.py  launched_plugins.py  network.py  policy.py  protocol_guidance.py  scanner_route.py  tuning.py  validation.py
host_doctor/parsers/: __init__.py  attachments.py  nessus.py  scan_fetcher.py
tests/: test_additive_failures.py  test_corroboration.py  test_credential_state.py  test_discovery.py  test_foundation_parsing.py  test_launched_plugins.py  test_port_coverage.py  test_protocol_guidance.py  test_review_fixes.py  test_safe_checks_default.py  test_scanner_route.py  test_sensor_awareness.py  test_tuning.py  test_validation_registry.py
