[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tenable-host-doctor"
version = "0.1.0"
description = "Single-host diagnostic tool for Tenable scans"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["tenable", "nessus", "vulnerability", "scanning", "diagnostics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "jinja2>=3.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
api = [
    "pytenable>=1.4.0",
]

[project.scripts]
host-doctor = "host_doctor.cli:main"

[project.urls]
Homepage = "https://github.com/ddangthatscrazy/tenable-host-doctor"
Repository = "https://github.com/ddangthatscrazy/tenable-host-doctor"
Documentation = "https://github.com/ddangthatscrazy/tenable-host-doctor/docs"
Issues = "https://github.com/ddangthatscrazy/tenable-host-doctor/issues"

[tool.setuptools]
packages = ["host_doctor"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
